roles/kubernetes-wallabag/files/k8s-wallabag-mariadb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-wallabag-mariadb
  labels:
    app: wallabag-mariadb
spec:
  selector:
    matchLabels:
      app: wallabag-mariadb
  replicas: 1
  template:
    metadata:
      labels:
        app: wallabag-mariadb
    spec:
      containers:
        - name: mariadb
          image: ejsmit/mariadb:10.3
          args:
            - --character-set-server=utf8mb4
            - --collation-server=utf8mb4_unicode_ci
            - --character-set-client-handshake=FALSE"
          ports:
          - containerPort: 3306
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: mydata
      volumes:
        - name: mydata
          persistentVolumeClaim:
            claimName: my-wallabag-db-5gi-pvc
