roles/kubernetes-wallabag/files/k8s-wallabag.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-wallabag
  labels:
    app: wallabag
spec:
  selector:
    matchLabels:
      app: wallabag
  replicas: 1
  template:
    metadata:
      labels:
        app: wallabag
    spec:
      containers:
      - name: wallabag
        image: ejsmit/wallabag:2.3.8
        ports:
        - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-wallabag-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
  - hosts:
    - wallabag.smit.org.uk
    secretName: letsencrypt-certs
  rules:
  - host: wallabag.smit.org.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: my-wallabag-service
          servicePort: 80
